--- a/api.html
+++ b/api.html
@@ -62,6 +62,12 @@ th.eg3 {width: 5%;}
         <td>url</td>
         <td><a href="/shota">Example</a></td>
       </tr>
+     <tr>
+        <td bgcolor="yellow">Random Wallpaper Teknologi</td>
+        <td>Menampilkan Random Wallpaper Teknologi.</td>
+        <td>url</td>
+        <td><a href="/wptekno">Example</a></td>
+      </tr>
 	<tr>
         <td bgcolor="green">Random Cerpen</td>
         <td>Menampilkan Random Cerpen.</td>
